api-gateway-nwpl-demo/hashicups/hashicups-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hashicups-route
spec:
  parentRefs:
  - name: hashicups-gateway
  rules:
  - backendRefs:
    - name: frontend
      port: 3000
  - matches:
    - path:
        type: PathPrefix
        value: /api
    backendRefs:
    - name: public-api
      port: 8080
